--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
-  "name": "hyperpower",
-  "version": "0.3.0",
-  "keywords": [
-    "hyper",
-    "hyper.app",
-    "hyper-plugin"
-  ],
-  "description": "Extension for particle effects in Hyper",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zeit/hyperpower.git"
-  },
+  "name": "hyper-plugins",
+  "description": "Auto-generated from `~/.hyper.js`!",
+  "private": true,
+  "version": "0.0.1",
+  "repository": "zeit/hyper",
+  "license": "MIT",
+  "homepage": "https://hyper.is",
   "dependencies": {
-    "color": "0.11.3",
-    "convert-css-color-name-to-hex": "0.1.1",
-    "lodash.throttle": "4.1.1",
-    "lodash.values": "4.3.0"
+    "hyperborder": "latest"
   }
 }
